@@ -1,3 +1,3 @@
 Ce module ajoute la gestion des avenants sur les contrats. Il inclut un
-ensemble d'outils de développements, ainsi que l'avenant de changement de date
-d'effet.
+ensemble d'outils de développements, ainsi que les avenants de changement de
+date d'effet et de données complémentaires sur le contrat.
