@@ -1,3 +1,4 @@
+* Add extra_data endorsement
 * Add endorsement number
 * Allow to trigger calculate after application
 * Allow to specify restoration order
